test/associative/bharshbarg/domains/rangeBad.good
rangeBad.chpl:2: error: Default Associative domains with idxType=range(int(64),bounded,false) are not allowed
