test/associative/bharshbarg/domains/rangeBad.chpl

var D : domain(range);
var A : [D] int;
